# designwin-survival

./: .gitignore  README.md  pyproject.toml
data/: design_wins_template.csv
notebooks/: study.ipynb
notes/: code-walkthrough.md  how-it-works.md
src/survivalsemi/: __init__.py  data.py  designwins.py  drawdowns.py  kaplan_meier.py  logrank.py
tests/: test_designwins.py  test_drawdowns.py  test_kaplan_meier.py  test_logrank.py
