[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "survivalsemi"
version = "0.1.0"
description = "Survival analysis for semiconductor equities: hand-built Kaplan-Meier and log-rank cross-validated against lifelines, Cox regression on drawdown-recovery times, and a ready-to-fill design-win announcement pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dmitri De Freitas" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "lifelines>=0.29",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.8",
    "notebook",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
